@@ -15,3 +15,14 @@ Description: Maemo Launcher for GTK applications
  pre-initializing the state of some libraries and then dynamically loading
  the applications.
 
+Package: maemo-launcher-dbg
+Architecture: any
+Section: devel
+Depends: maemo-launcher (= ${Source-Version})
+Description: Maemo Launcher for GTK applications - debugging symbols
+ Maemo Launcher for any gtk+ application. Tries to reduce startup time by
+ pre-initializing the state of some libraries and then dynamically loading
+ the applications.
+ .
+ This package provides the debugging symbols for maemo-launcher.
+
