@@ -52,7 +52,7 @@ install: build
 	dh_testdir
 	dh_testroot
 	dh_clean -k
-	dh_installdirs
+	dh_installdirs -a
 	
 	$(MAKE) install DESTDIR=$(CURDIR)/debian/maemo-launcher
 
@@ -62,25 +62,25 @@ binary-indep: build install
 binary-arch: build install
 	dh_testdir
 	dh_testroot
-	dh_installchangelogs ChangeLog
-	dh_installdocs
-	dh_installexamples
+	dh_installchangelogs -a ChangeLog
+	dh_installdocs -a
+	dh_installexamples -a
 #	dh_install
 #	dh_installlogrotate
 #	dh_installpam
-	dh_installinit -- start 45 2 3 4 . stop 45 0 1 5 6 .
-	dh_installman
-	dh_link
-	dh_strip
-	dh_compress
-	dh_fixperms
+	dh_installinit -a -- start 45 2 3 4 . stop 45 0 1 5 6 .
+	dh_installman -a
+	dh_link -a
+	dh_strip --dbg-package=maemo-launcher
+	dh_compress -a
+	dh_fixperms -a
 	chmod u+s $(CURDIR)/debian/maemo-launcher/usr/lib/maemo-launcher/maemo-defender
 #	dh_makeshlibs
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
+	dh_installdeb -a
+	dh_shlibdeps -a
+	dh_gencontrol -a
+	dh_md5sums -a
+	dh_builddeb -a
 
 binary: binary-indep binary-arch
 
